kubernetes/artifactory/reposilite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reposilite
spec:
  selector:
    matchLabels:
      app: reposilite
  template:
    metadata:
      labels:
        app: reposilite
    spec:
      volumes:
        - name: reposilite-config
          configMap:
            name: reposilite-config
      containers:
        - name: reposilite
          image: dzikoysk/reposilite:2.7.4
          command:
            - sh
            - -c
            - java -Dreposilite.hostname="$HOSTNAME" -jar reposilite.jar -wd=/app/data
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/data/tokens.yml
              subPath: tokens.yml
              name: reposilite-config
            - mountPath: /app/data/reposilite.yml
              subPath: reposilite.yml
              name: reposilite-config
---
apiVersion: v1
kind: Service
metadata:
  name: reposilite-service
spec:
  selector:
    app: reposilite
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reposilite-ingress
  labels:
    app: reposilite-ingress
    group: reposilite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reposilite.local.io
      http:
        paths:
          - path: /
            backend:
              serviceName: reposilite-service
              servicePort: 80
